# ZTApp-Operator

./: CHANGELOG.md  Dockerfile  README.md  pyproject.toml  pyrightconfig.json
.github/workflows/: zta-operator-ci.yaml
deploy/crd/: supplychainattestation-crd.yaml  zerotrustapplication-crd.yaml
deploy/operator/: deployment.yaml
deploy/rbac/: clusterrole.yaml  clusterrolebinding.yaml  falco-talon-role.yaml  falco-talon-rolebinding.yaml  serviceaccount.yaml
deploy/samples/: sca-sample.yaml  zta-sample.yaml
helm/zta-operator/: Chart.yaml  values.yaml
helm/zta-operator/crds/: supplychainattestations.devsecops.licenta.ro.yaml  zerotrustapplications.devsecops.licenta.ro.yaml  zerotrustsecrets.devsecops.licenta.ro.yaml
helm/zta-operator/templates/: NOTES.txt  _helpers.tpl  clusterrole.yaml  clusterrolebinding.yaml  deployment.yaml  falco-talon-rbac.yaml  serviceaccount.yaml
src/zta_operator/: config.py  logging_utils.py  operator.py  resources.py  supply_chain.py  supply_chain_attestation.py  talon.py  zerotrust_secret.py
src/zta_operator.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
